force-app/main/default/objects/WAV_DataLoad_CFG__mdt/WAV_DataLoad_CFG__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata type to configure the WAV_DataLoad_SCH schedulable apex class, used to initiate/update custom Analytics datasets out of SOQL queries.</description>
    <label>WAV_DataLoad_CFG</label>
    <pluralLabel>WAV_DataLoad_CFG</pluralLabel>
</CustomObject>