force-app/main/default/objects/WAV_DataLoad_CFG__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>