force-app/main/default/objects/WAV_DataLoad_CFG__mdt/fields/FieldMapping__c.field-meta.xml
<CustomField>
    <fullName>FieldMapping__c</fullName>
    <description>JSON structure listing the mapping of the field names between Analytics DataSet and the source object.</description>
    <label>FieldMapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>