force-app/main/default/objects/WAV_DataLoad_CFG__mdt/fields/MaxRowsPerFile__c.field-meta.xml
<CustomField>
    <fullName>MaxRowsPerFile__c</fullName>
    <label>MaxRowsPerFile</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>