force-app/main/default/objects/WAV_DataLoad_CFG__mdt/fields/MetaJson__c.field-meta.xml
<CustomField>
    <fullName>MetaJson__c</fullName>
    <label>MetaJson</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>