force-app/main/default/objects/WAV_DataLoad_CFG__mdt/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Operation done on the target dataset (see InsightsExternalData object details)</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overwrite</fullName>
                <default>true</default>
                <label>Overwrite</label>
            </value>
            <value>
                <fullName>Append</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>