force-app/main/default/objects/WAV_DataLoad_CFG__mdt/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <description>Object field by which the order by should be made in order to support offset management</description>
    <label>OrderBy</label>
    <length>25</length>
    <type>Text</type>
</CustomField>