force-app/main/default/objects/WAV_DataLoad_CFG__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>SOQL query executed to fetch data for the Analytics dataset.</description>
    <label>Query</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>